Change theme color for browser menu bars on mobile; Fix paper height ishon mobile.

--- a/src/styles/responsive.scss
+++ b/src/styles/responsive.scss
@@ -1,7 +1,7 @@
 @media screen and (max-width: 767px) {
   .Paper {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     border-radius: 0;
     margin: 0;
 
